# GPU-Accelerated-Vector-Database

./: .gitignore  CMakeLists.txt  README.md
include/core/: VectorStore.h
include/cuda/: GpuVectorStore.h
include/cuda/kernels/: batch_distance.cuh  distance_kernels.cuh
include/index/: GpuHNSWBuilder.h  HNSWConfig.h  HNSWIndex.h
notebooks/: phase1c_colab_setup.ipynb  phase2b_colab.ipynb
src/: CMakeLists.txt
src/bindings/: python_bindings.cpp
src/core/: VectorStore.cpp
src/cuda/: GpuVectorStore.cu
src/cuda/kernels/: batch_distance.cu  distance_kernels.cu  placeholder.cu
src/index/: GpuHNSWBuilder.cu  HNSWIndex.cpp
tests/: CMakeLists.txt  test_batch_distance.cpp  test_gpu_kernels.cpp  test_hnsw.cpp  test_vectorstore.cpp
